gtk-3.0/gtk-widgets.css
/* ... */
    scale highlight:disabled {
      background-color: transparent; }
      scale highlight:disabled:backdrop {
        background-color: transparent; }
    scale highlight:backdrop {
      background-color: transparent; }
  scale.horizontal indicator {
    min-height: 6px;
    min-width: 1px; }
  scale.horizontal.fine-tune indicator {
    min-height: 3px; }
  scale.vertical indicator {
    min-height: 1px;
    min-width: 6px; }
  scale.vertical.fine-tune indicator {
    min-width: 3px; }
  scale.fine-tune.horizontal {
    padding-top: 10px;
    padding-bottom: 10px;
    min-height: 14px; }
  scale.fine-tune.vertical {
    padding-left: 10px;
    padding-right: 10px;
    min-width: 14px; }
  scale.fine-tune slider {
    margin-top: -6px;
    margin-bottom: -9px; }
  scale.fine-tune fill, scale.fine-tune trough, scale.fine-tune highlight {
    border-radius: 0;
    -gtk-outline-radius: 0; }
  scale.fine-tune marks.top {
    margin-bottom: 8px;
    margin-top: -13px; }
  scale.fine-tune marks.bottom {
    margin-top: 8px;
    margin-bottom: -13px; }
  scale.fine-tune marks.top {
    margin-right: 8px;
    margin-left: -13px; }
  scale.fine-tune marks.bottom {
    margin-left: 8px;
    margin-right: -13px; }
  scale slider {
    min-height: 21px;
    min-width: 15px;
    margin: -6px;
    margin-bottom: -10px;
    border: none;
    border-radius: 0;
    color: @theme_selected_fg_color;
    background-color: transparent;
    background-image: url("assets/slider-horiz.png"); }
    scale slider:hover {
      color: @theme_selected_fg_color;
      background-image: url("assets/slider-horiz.png"); }
    scale slider:disabled {
      -gtk-icon-shadow: none;
      background-image: url("assets/slider-horiz-insensitive.png"); }
      scale slider:disabled:backdrop {
        -gtk-icon-shadow: none;
        background-image: url("assets/slider-horiz-insensitive.png"); }
    scale slider:backdrop {
      color: @theme_unfocused_selected_fg_color;
      background-image: url("assets/slider-horiz-insensitive.png"); }
  scale.vertical slider {
    min-height: 15px;
    min-width: 21px;
    margin: -5px;
    margin-right: -10px;
    background-image: url("assets/slider-vert.png"); }
    scale.vertical slider:hover {
      background-image: url("assets/slider-vert.png"); }
    scale.vertical slider:disabled {
      background-image: url("assets/slider-vert-insensitive.png"); }
      scale.vertical slider:disabled:backdrop {
        background-image: url("assets/slider-vert-insensitive.png"); }
    scale.vertical slider:backdrop {
      background-image: url("assets/slider-vert-insensitive.png"); }
  scale value {
    color: alpha(currentColor, 0.35); }
  scale marks {
    color: alpha(currentColor, 0.35); }
    scale marks.top {
      margin-bottom: 6px;
      margin-top: -12px; }
    scale marks.bottom {
      margin-top: 6px;
      margin-bottom: -12px; }
    scale marks.top {
      margin-right: 6px;
      margin-left: -12px; }
    scale marks.bottom {
      margin-left: 6px;
      margin-right: -12px; }

scrollbar {
  border: none;
  background-color: @theme_bg_color; }
  scrollbar trough {
    border: none;
    border-radius: 0; }
  scrollbar button, scrollbar button:backdrop, scrollbar button:active, scrollbar button:active:backdrop, scrollbar button:disabled, scrollbar button:disabled:backdrop {
    color: transparent;
    padding: 0;
    background-size: auto;
    background-position: center center;
    background-repeat: no-repeat; }
  scrollbar.overlay-indicator {
    opacity: 1; }
  scrollbar.horizontal slider {
    min-width: 45px;
    min-height: 14px;
    margin: 0;
    border: 1px solid @borders;
    border-radius: 0px;
    background-clip: padding-box;
    background-color: @theme_bg_color;
    box-shadow: inset -1px 0 shade(@theme_bg_color, 0.65), inset 0 -1px shade(@theme_bg_color, 0.65), inset 1px 0 mix(@theme_bg_color, @light_shadow, 0.7), inset 0 1px mix(@theme_bg_color, @light_shadow, 0.7); }
  scrollbar.horizontal button {
    min-height: 14px;
    min-width: 14px; }
    scrollbar.horizontal button.down {
      background-image: url("assets/arrow-right.png"); }
    scrollbar.horizontal button.up {
      background-image: url("assets/arrow-left.png"); }
  scrollbar.vertical slider {
    min-width: 14px;
    min-height: 45px;
    margin: 0;
    border: 1px solid @borders;
    border-top-color: mix(@theme_bg_color, @light_shadow, 0.7);
    border-left-color: mix(@theme_bg_color, @light_shadow, 0.7);
    border-radius: 0px;
    background-clip: padding-box;
    background-color: @theme_bg_color;
    box-shadow: inset -1px 0 shade(@theme_bg_color, 0.65), inset 0 -1px shade(@theme_bg_color, 0.65), inset 1px 0 mix(@theme_bg_color, @light_shadow, 0.7), inset 0 1px mix(@theme_bg_color, @light_shadow, 0.7); }
  scrollbar.vertical button {
    min-height: 14px;
    min-width: 14px; }
    scrollbar.vertical button.down {
      background-image: url("assets/arrow-down.png"); }
    scrollbar.vertical button.up {
      background-image: url("assets/arrow-up.png"); }
  treeview ~ scrollbar.vertical {
    border-top: 1px solid @borders;
    margin-top: -1px; }

separator {
  -gtk-icon-source: none;
  min-width: 1px;
  min-height: 1px;
  background-color: shade(@theme_bg_color, 0.65);
  box-shadow: 1px 1px @light_shadow; }
  separator:backdrop {
    background-color: shade(@theme_bg_color, 0.65); }
  button separator {
    margin: 4px 1px; }
  .sidebar view separator, view separator, separator .separator, separator {
    border: none;
    background-color: shade(@theme_bg_color, 0.65); }
    .sidebar view separator:backdrop, view separator:backdrop, separator .separator:backdrop, separator:backdrop {
      border: none;
      background-color: shade(@theme_bg_color, 0.65); }
  .primary-toolbar separator, toolbar separator {
    background-color: mix(shade(@theme_bg_color, 0.65), @toolbar_bg_color, 0.5); }
/* ... */

